fix(): add break word for too long data

--- a/src/oui/oui-tile/tile.less
+++ b/src/oui/oui-tile/tile.less
@@ -83,6 +83,7 @@
     font-size: @oui-tile-definition-description-font-size;
     font-weight: @oui-font-bold;
     margin-left: 0;
+    word-break: break-word;
 
     &_vertical-sub {
       vertical-align: sub;
